deploy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: console-gql
  labels:
    app: console-gql
  namespace: rawagner
spec:
  containers:
    - name: console-gql
      image: quay.io/rawagner/console-gql
      volumeMounts:
        - name: graphql-serving-cert
          readOnly: true
          mountPath: /app-root/serving-cert
        - name: service-ca
          readOnly: true
          mountPath: /app-root/service-ca
      ports:
        - containerPort: 4000
        - containerPort: 8080
      resources:
        requests:
          cpu: 1000m
          memory: 1Gi
  volumes:
    - name: graphql-serving-cert
      secret:
        secretName: graphql-serving-cert
        defaultMode: 420
    - name: service-ca
      configMap:
        name: service-ca
        defaultMode: 420



apiVersion: v1
kind: Service
metadata:
  name: console-gql
  namespace: rawagner
spec:
  selector:
    app: console-gql
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
